part1/ex110/manifests/serviec.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-string-svc
spec:
  type: ClusterIP
  selector:
    app: random-string
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3031
